actuliazamos la coexion del index al admmin

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,9 @@
         <a href="liga.html"><i class="fas fa-user"></i> PRÓXIMO PARTIDO</a>
         <a href="SoySocio.html"><i class="fas fa-users"></i> SOCIOS</a>
         <a href="contacto.html"><i class="fas fa-envelope"></i> CONTACTO</a>
-        <a href="ad_master/admin_login.html"><i class="fas fa-user-cog"></i> ADMIN</a>
+       <a href="https://csydconstitucion-8b8bb.web.app/admin_login.html">
+  <i class="fas fa-user-cog"></i> ADMIN
+</a>
     </nav>
 
     <div class="marquee-container">
