Se agrega la tienda virtual

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
         </div>
         <a href="liga.html"><i class="fas fa-user"></i> PRÓXIMO PARTIDO</a>
         <a href="SoySocio.html"><i class="fas fa-users"></i> SOCIOS</a>
+        <a href="tienda/e-canario.html"><i class="fas fa-store"></i> TIENDA</a>
         <a href="contacto.html"><i class="fas fa-envelope"></i> CONTACTO</a>
         <a href="https://csydconstitucion-8b8bb.web.app/admin_login.html"><i class="fas fa-user-cog"></i> ADMIN</a>
     </nav>
